[gd_scene load_steps=8 format=3 uid="uid://cmu8d5555dysr"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_s4q1o"]
[ext_resource type="PackedScene" uid="uid://dct7w7irxw3co" path="res://scenes/hud.tscn" id="2_lau7k"]
[ext_resource type="PackedScene" uid="uid://c3g3k77lgl38x" path="res://scenes/rocket.tscn" id="3_l8dch"]
[ext_resource type="PackedScene" uid="uid://chd5ct8oolrfj" path="res://scenes/enemy_spaceship.tscn" id="4_4mx3p"]
[ext_resource type="PackedScene" uid="uid://drkn73v08f4kn" path="res://scenes/starfield.tscn" id="5_uf1tn"]
[ext_resource type="AudioStream" uid="uid://bh78f3atii5m4" path="res://assets/sounds/blip_sfx.wav" id="6_cblqq"]
[ext_resource type="AudioStream" uid="uid://bu1mkyhjofx2l" path="res://assets/sounds/explosion_sfx.wav" id="7_6kwdt"]

[node name="Main" type="Node"]
script = ExtResource("1_s4q1o")
enemy_ship_scene = ExtResource("4_4mx3p")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(965, 552)

[node name="HUD" parent="." instance=ExtResource("2_lau7k")]

[node name="Rocket" parent="." instance=ExtResource("3_l8dch")]

[node name="GameTimer" type="Timer" parent="."]

[node name="Starfield" parent="." instance=ExtResource("5_uf1tn")]

[node name="UISelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cblqq")
volume_db = -10.0

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6kwdt")
volume_db = -10.0

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
